--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "SAJID AHMAD",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
